--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,30 +1,39 @@
+html {
+    background-image: url("../images/just-waves.png");
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+h1, h2 {
+    font-family: 'Georgia', Times, Times 'New Roman', serif;
+    font-weight: bold;
+} 
 header {
     width: 100%;
     background-color: #ffffff;
-    border-bottom: 2px solid #cccccc;
-    font-family: 'Georgia', Times, Times 'New Roman', serif;
-    padding: 30px 0; 
+    border-bottom: 3px solid #cccccc;
+    overflow: auto;
 }
 #header-container {
     width: 960px;
     margin: auto;
-    border: 1px solid red;
+    /* no idea why, but the border here aligns header perfectly */
+    border: 1px solid #ffffff;
     height: 25px;
 }
 #brand {
-    background-color: #4aaaa5;
+    background-color: #ace6ff;
     color: #ffffff;
     float: left;
-    padding: 20px;
+    padding: 30px;
+    font-size: 32px;
 }
 ul {
     list-style-type: none;
     text-align: right;
+    margin-top: 5%;
 }
 li {
     float: right;
-    border-right: 1px solid #cccccc;
-    margin-right: 3px;
+    margin-right: 10px;
 }
 li:last-child {
     border-right: none;
@@ -32,16 +41,72 @@ li:last-child {
 li a{
     text-decoration: none;
 }
-html {
-    background-image: url("../images/just-waves.png");
+h2 {
+    font-size: 24px;
+    text-indent: 15px;
+}
+hr {
+    width: 95%;
 }
 #zsmall {
     float: left;
+    margin: 15px;
+}
+.content {
+    margin: 15px 5px;
+}
+.content h2 {
+    color: #ace6ff;
+}
+.content p {
+    margin-top: 23px;
 }
 .container {
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     background-color: #ffffff;
+    border: 3px solid #dddddd;
     width: 960px;
     margin: auto;
     overflow: auto;
+    margin-top: 25px;
+}
+#form-frame {
+    width: 95%;
+    margin: auto;
+}
+form input {
+    margin: 5px 0;
+    width: 100%;
+} 
+input[type=text]:focus {
+    background-color: #ace6ff;
+  }
+textarea {
+    margin: 5px 0;
+    width: 100%;
+    height: 150px;
+    resize: none;
+  }
+textarea[type=text]:focus {
+    background-color: #ace6ff;
+  }
+.col img:first-child {
+    float: left;
+  }
+img {
+    margin: 5px 15px;
+  }
+/* .port-img {
+    position: relative;
+} */
+.col {
+    position: relative;
+}
+.img-label {
+    position: absolute;
+    bottom: 5%;
+    left: 5%;
+    /* width: 100%; */
+    text-align: center;
+    background-color: #ace6ff;
+    color: #ffffff;
 }
