--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@ html {
     background-image: url("../images/just-waves.png");
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
-h1, h2 {
+h1, h2, h6 {
     font-family: 'Georgia', Times, Times 'New Roman', serif;
     font-weight: bold;
 } 
@@ -10,7 +10,7 @@ header {
     width: 100%;
     background-color: #ffffff;
     border-bottom: 3px solid #cccccc;
-    overflow: auto;
+    overflow: hidden;
 }
 #header-container {
     width: 960px;
@@ -78,7 +78,7 @@ form input {
     width: 100%;
 } 
 input[type=text]:focus {
-    background-color: #ace6ff;
+    background-color: #dddddd;
   }
 textarea {
     margin: 5px 0;
@@ -87,25 +87,23 @@ textarea {
     resize: none;
   }
 textarea[type=text]:focus {
-    background-color: #ace6ff;
+    background-color: #dddddd;
   }
-.col img:first-child {
+.port-img img {
+    
+    width: 100%;
+  }
+
+.port-img {
+    position: relative;
     float: left;
-  }
-img {
     margin: 5px 15px;
-  }
-/* .port-img {
-    position: relative;
-} */
-.col {
-    position: relative;
 }
 .img-label {
     position: absolute;
     bottom: 5%;
-    left: 5%;
-    /* width: 100%; */
+    width: 100%;
+    padding: 10px 0;
     text-align: center;
     background-color: #ace6ff;
     color: #ffffff;
