--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,13 @@
 html {
     background-image: url("../images/just-waves.png");
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    height: 100%;
+    margin: 0;
+}
+body {
+    min-height: 100%;
+    position: relative;
+    padding-bottom: -50px;
 }
 h1, h2, h6 {
     font-family: 'Georgia', Times, Times 'New Roman', serif;
@@ -34,9 +41,6 @@ ul {
 li {
     float: right;
     margin-right: 10px;
-}
-li:last-child {
-    border-right: none;
 }
 li a{
     text-decoration: none;
@@ -107,4 +111,55 @@ textarea[type=text]:focus {
     text-align: center;
     background-color: #ace6ff;
     color: #ffffff;
+}
+footer {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 42px;
+    border-top: 8px solid #ace6ff;
+    text-align: center;
+    background-color: #cccccc;
+    color: #ffffff;
+}
+@media only screen and (max-width: 980px) {
+    #header-container {
+        width: 768px;
+        margin: auto;
+        height: 25px;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    #header-container {
+        width: 640px;
+        margin: auto;
+        /* no idea why, but the border here aligns header perfectly */
+        border: 1px solid #ffffff;
+        height: 25px;
+    }
+}
+
+@media only screen and (max-width: 640px) {
+    #header-container {
+        width: 100%;
+    }
+    ul {
+        list-style-type: none;
+        text-align: right;
+        width: 100%;
+    }
+    li {
+        padding: 0 10px;
+    }
+    #brand {
+        background-color: #ace6ff;
+        color: #ffffff;
+        width: 100%;
+        margin: auto;
+        clear: right;
+        font-size: 32px;
+        text-align: center;
+    }
 }
