--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ html {
 body {
     min-height: 100%;
     position: relative;
-    padding-bottom: -50px;
+    padding-bottom: 50px;
 }
 h1, h2, h6 {
     font-family: 'Georgia', Times, Times 'New Roman', serif;
@@ -17,9 +17,12 @@ header {
     width: 100%;
     background-color: #ffffff;
     border-bottom: 3px solid #cccccc;
-    overflow: hidden;
+    clear: both;
+    height: 92px;
+    /* overflow: hidden; */
 }
 #header-container {
+    position: relative;
     width: 960px;
     margin: auto;
     /* no idea why, but the border here aligns header perfectly */
@@ -27,24 +30,24 @@ header {
     height: 25px;
 }
 #brand {
+    position: absolute;
     background-color: #ace6ff;
     color: #ffffff;
     float: left;
     padding: 30px;
     font-size: 32px;
 }
-ul {
-    list-style-type: none;
-    text-align: right;
-    margin-top: 5%;
+#nav {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 72px;
 }
-li {
-    float: right;
+#nav div {
     margin-right: 10px;
 }
 li a{
     text-decoration: none;
-}
+} 
 h2 {
     font-size: 24px;
     text-indent: 15px;
@@ -94,7 +97,6 @@ textarea[type=text]:focus {
     background-color: #dddddd;
   }
 .port-img img {
-    
     width: 100%;
   }
 
@@ -117,7 +119,7 @@ footer {
     left: 0;
     right: 0;
     bottom: 0;
-    height: 42px;
+    height: 30px;
     border-top: 8px solid #ace6ff;
     text-align: center;
     background-color: #cccccc;
@@ -126,40 +128,105 @@ footer {
 @media only screen and (max-width: 980px) {
     #header-container {
         width: 768px;
-        margin: auto;
-        height: 25px;
+    }
+    .container {
+        width: 768px;
+    }
+    footer {
+        height: 30px;
+    }
+    body {
+        padding-bottom: 50px;
     }
 }
 
 @media only screen and (max-width: 768px) {
     #header-container {
-        width: 640px;
-        margin: auto;
-        /* no idea why, but the border here aligns header perfectly */
-        border: 1px solid #ffffff;
-        height: 25px;
+        width: 704px;
+    }
+    .container {
+        width: 704px;
+    }
+    footer {
+        height: 30px;
+    }
+    body {
+        padding-bottom: 50px;
     }
 }
 
+@media only screen and (max-width: 704px) {
+    #header-container {
+        width: 640px;
+    }.container {
+        width: 640px;
+    }
+    footer {
+        height: 30px;
+    }
+    body {
+        padding-bottom: 50px;
+    }
+}
 @media only screen and (max-width: 640px) {
     #header-container {
         width: 100%;
     }
-    ul {
-        list-style-type: none;
-        text-align: right;
-        width: 100%;
-    }
-    li {
-        padding: 0 10px;
+    .container {
+        width: 500px;
     }
     #brand {
         background-color: #ace6ff;
         color: #ffffff;
         width: 100%;
-        margin: auto;
-        clear: right;
         font-size: 32px;
         text-align: center;
+        padding: 30px 0;
+    }
+    #nav {
+        background-color: #ffffff;
+        margin-top: 93px;
+        justify-content: center;
+    }
+    footer {
+        height: 30px;
+    }
+    body {
+        padding-bottom: 50px;
+    }
+}
+
+@media only screen and (max-width: 510px) {
+    #header-container {
+        width: 100%;
+    }
+    header{
+        height: 62px;
+    }
+    #nav{
+        margin-top: 60px;
+        height: 16px;
+    }
+    .container {
+        width: 400px;
+    }
+    #brand {
+        background-color: #ace6ff;
+        color: #ffffff;
+        width: 100%;
+        font-size: 32px;
+        text-align: center;
+        padding: 15px 0;
+    }
+    #nav {
+        background-color: #ffffff;
+        margin-top: 62px;
+        justify-content: center;
+    }
+    footer {
+        height: 30px;
+    }
+    body {
+        padding-bottom: 50px;
     }
 }
