--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,12 @@ hr {
 .content p {
     margin-top: 23px;
 }
+.links {
+    color: #ace6ff;
+}
+.links:hover {
+    color: #cccccc;
+}
 .container {
     background-color: #ffffff;
     border: 3px solid #dddddd;
